# monea

./: .gitignore  Cargo.toml  Makefile  README.md  example-brew-formula.rb  monea.config.json  monea.config.yaml
cli/: Cargo.toml  build.rs
cli/src/: build.rs  cli.rs  main.rs
cli/src/authentication/: session.rs
cli/src/commands/: billing.rs  init.rs  mod.rs  run.rs  stop.rs
cli/src/commands/auth/: account.rs  login.rs  logout.rs  mod.rs
cli/src/handlers/: init_handler.rs  mod.rs
cli/src/manager/: config.rs
cli/src/utils/: create_yaml_config.rs  mod.rs  path_helper.rs
cli/src/utils/manager/: mod.rs
crates/api/: Cargo.toml
crates/auth/: Cargo.toml
crates/auth/src/: commands.rs  config.rs  lib.rs
crates/auth/src/auth0/: client.rs  get_user_info.rs  login.rs  logout.rs  mod.rs
crates/auth/src/credentials_store/: client.rs  model.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/cli/src/authentication/: login_email_password.rs  prompts.rs
crates/cli/src/commands/: check.rs  init.rs  run.rs  stop.rs
crates/cli/src/commands/auth/: mod.rs
crates/cli/src/utils/: user_input.rs
crates/file_writer/: Cargo.toml  Dockerfile
crates/functions/: Cargo.toml
crates/functions/src/: lib.rs  manager_save.rs  start_l2.rs
crates/manager/: Cargo.toml
crates/manager/src/: lib.rs
crates/manager/src/project_config/: mod.rs  verifier.rs  yaml_file_helper.rs
crates/manager/src/services/: mod.rs  services_config.rs
crates/periphery/: Cargo.toml
crates/periphery/src/commands/: check_handler.rs  init_handler.rs  mod.rs  run_handler.rs  stop_handler.rs
crates/tui/: Cargo.toml
crates/tui/src/: lib.rs  poller.rs  update.rs
crates/utils/: Cargo.toml
crates/utils/src/: constants.rs  create_yaml_config.rs  lib.rs  naming.rs  path_helper.rs
docker/anvil/: Dockerfile
engine/: Dockerfile  kurtosis.yml  main.star  network_params.yaml  stop_services.star
engine/src/: l2.star
engine/src/contracts/: contract_deployer.star
handlers/: Cargo.toml
handlers/src/commands/: check_handler.rs  init_handler.rs  mod.rs  run_handler.rs  stop_handler.rs
handlers/src/functions/: start_l1.rs
interfaces/cli/: Cargo.toml  build.rs
interfaces/cli/src/: cli.rs  main.rs
interfaces/tui/: Cargo.toml
interfaces/tui/src/: app.rs  lib.rs  message.rs  model.rs  ui.rs
kurtosis-pkg/: Dockerfile  Dockerfile.legacy  kurtosis.yml  main.star  network_params.yaml  remove_services.star  start_l1.star  start_opstack.star
kurtosis-pkg/src/: l2.star
services/file_writer/src/: main.rs
services/manager/: Cargo.toml
services/manager/src/: config.rs  lib.rs  parse_enclave_inspect_stdout.rs
services/monea-core/: Cargo.toml
services/monea-core/src/: lib.rs
services/utils/: Cargo.toml
services/utils/src/: lib.rs
utils/: Cargo.toml
utils/src/: create_json_config.rs  lib.rs  path_helper.rs  project_config_verifier.rs
utils/src/project_config/: chains.rs  mod.rs  pipeline.rs  verifier.rs
(+25 files in other folders)
