[package]
name = "monea-cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7.4"
regex = "1.10.6"
serde_yaml = "0.9.34"
dirs = "5.0.1"
