[package]
name = "monea_auth"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
monea_utils.workspace = true
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = {version = "0.12.8", features = ["json", "blocking"]}
spinners = "4.1.1"
ureq = {version = "2.10.1", features = ["json"]}
open = "5.3.0"
serde_json = "1.0.128"
