[package]
name = "monea_cli"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7.4"
regex = "1.10.6"
serde_yaml = "0.9.34"
dirs = "5.0.1"
dotenv = "0.15.0"
pathdiff = "0.2.1"
webbrowser = "1.0.2"
anyhow = "1.0.89"
jsonwebtoken = "9.3.0"
crossterm = "0.28.1"
ratatui = "0.28.1"
rpassword = "7.3.1"
reqwest = "0.11"
monea_utils = { path = "../utils" }
monea_tui = { path = "../tui" }
monea_periphery = { path = "../periphery" }
monea_auth.workspace = true

[build-dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
dotenv = "0.15.0"
serde_json = "1.0"
