[package]
name = "monea_functions"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
pathdiff = "0.2.1"
monea_manager = { path = "../manager" }
monea_utils = { path = "../utils" }
