[package]
name = "monea_periphery"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
pathdiff = "0.2.1"
monea_manager = { path = "../manager" }
monea_utils = { path = "../utils" }
monea_functions = { path = "../functions" }
